--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html ng-app="myApp">
   <head>
     <meta charset="UTF-8">
     <title>Football Frontier</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700,900' rel='stylesheet' type='text/css'>
     <!-- // <script src="js/lib/bootstrap-3.3.6-dist/css/bootstrap.min.css"></script>   -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="styles/boot.css">
+    <!-- <link rel="stylesheet" href="styles/main.css"> -->
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <script src="js/lib/angular/angular.min.js"></script>
     <script src="js/lib/angular/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-resource.min.js"></script>
     <script src="js/lib/angular/angular-animate.min.js"></script>
-    <script src="js/lib/angular/ui-bootstrap.min.js"></script>
+    <!-- // <script src="js/lib/angular/ui-bootstrap.min.js"></script> -->
 
     <script src="controller/app.js"></script>
     <!-- // <script src="controller/services/authentication.js"></script> -->
@@ -19,9 +22,35 @@
     <!-- // <script src="controller/match.js"></script> -->
   </head>
   <body>
-    <header>
+    <!-- <header>
       <nav class="cf" ng-include="'views/nav.html'"></nav>
-    </header>
+    </header> -->
+    <div class="header">
+      <div class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="#/">airlines</a>
+          </div>
+
+          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#/">Home</a></li>
+              <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     
     <div ng-view></div>
   </body>
