--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- // <script src="js/lib/bootstrap-3.3.6-dist/css/bootstrap.min.css"></script>   -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="styles/boot.css">
-    <!-- <link rel="stylesheet" href="styles/main.css"> -->
+    <link rel="stylesheet" href="styles/main.css">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <script src="js/lib/angular/angular.min.js"></script>
     <script src="js/lib/angular/angular-route.min.js"></script>
@@ -37,14 +37,14 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">airlines</a>
+            <a class="navbar-brand" href="#/">Football League</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
+              <li class="active"><a href="#/">League</a></li>
+              <li><a ng-href="#/about">League Details</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
