--- a/pages/league.html
+++ b/pages/league.html
@@ -1,8 +1,8 @@
 <div class="container-fluid header text-center">
- <h3>Foot-Ball-App</h3>
+ <h3>Leagues</h3>
 </div>
 <br>
-<div class="container">
+<!-- <div class="container">
   <div class ="row">
    <div class="col-xs-6 col-md-3" id="result"  ng-repeat = "n in match.match">
      <div class="well match">
@@ -25,20 +25,40 @@
        Last Update : {{n.lastUpdated}}
        <br></a>
      </div>
-   <!-- <table class="table table-striped table-hover ">
-     <thead>
-       <tr>
-        <th><h3>League</h3></th>
-        <th><h3>Caption</h3></th>
-       </tr>
-     </thead>
-     <tbody>
-     <tr ng-repeat = "n in fb.football_data">
-       <th><h5>{{n.league}}</h5></th>
-       <th><h5>{{n.caption}}</h5></th>
-     </tr>
-     </tbody>
-   </table> -->
    </div>
+  </div>
+</div> -->
+
+<div class="container">
+  <div class="col-sm-12" ng-repeat = "n in match.matches">
+
+    <div class="bs-calltoaction bs-calltoaction-primary">
+      <div class="row">
+        <div class="col-md-9 cta-contents">
+          <h1 class="cta-title">League: {{n.league}}</h1>
+          <div class="cta-desc">
+            
+             Name : {{n.caption}}
+             <br>
+             Year : {{n.year}}
+             <br>
+             Match Day : {{n.currentMatchday}}
+             <br>
+             Match Days : {{n.numberOfMatchdays}}
+             <br>
+             Teams : {{n.numberOfTeams}}
+             <br>
+             Games : {{n.numberOfGames}}
+             <br>
+             Last Update : {{n.lastUpdated}}
+             <br>
+
+          </div>
+        </div>
+        <div class="col-md-3 cta-button">
+          <a href="#/league/{{n.id}}" class="btn btn-lg btn-block btn-info">League Details</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
