--- a/pages/leagueDetails.html
+++ b/pages/leagueDetails.html
@@ -1,4 +1,4 @@
-<!-- <div class="container-fluid header text-center">
+<div class="container-fluid header text-center">
  <h3>Match Details</h3>
 </div>
 <div class ="row">
@@ -11,7 +11,7 @@
        </tr>
      </thead>
      <tbody>
-     <tr ng-repeat = "n in details.league_details.teams" class="info">
+     <tr ng-repeat = "n in details.getTeamData.teams" class="info">
        <th>{{n.name}}</th>
        <th>{{n.code}}</th>
        <th>{{n.shortName}}</th>
@@ -22,38 +22,5 @@
    </table>
  </div>
 </div>
- -->
 
-<div class="container-fluid header text-center">
- <h3>Fixture Table</h3>
-</div>
-<div class ="row">
-  <div class="container">
- <div class="col-md-8" id="result">
-   <table class="table table-hover">
-     <thead>
-       <tr>
-        <th>Position</th>
-        <!-- <th>Club Logo</th>
-        <th>Team</th>
-        <th>GP</th>
-        <th>Points</th>
-        <th>Goals</th>
-        <th>Wins</th> -->
-       </tr>
-     </thead>
-     <tbody>
-     <tr ng-repeat = "n in details.league_details.fixtures">
-       <th>{{n.status}}</th>
-       <!-- <th><img class="img-responsive" ng-src="{{n.crestURI}}" width="80" length="80"/></th>
-       <th>{{n.teamName}}</th>
-       <th>{{n.playedGames}}</th>
-       <th>{{n.points}}</th>
-       <th>{{n.goals}}</th>
-       <th>{{n.wins}}<th> -->
-     </tr>
-     </tbody>
-   </table>
- </div>
- </div>
-</div>
+
