Modified league fixtures and UI Design

--- a/pages/teams.html
+++ b/pages/teams.html
@@ -23,7 +23,7 @@
       <div class="container-fluid slot">
        <h3>Team Squad</h3>
       </div>
-      <table class="table table-default">
+      <table class="table table-striped">
         <thead>
           <tr>
             <th>Jersey No.</th>
