--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav class="cf" ng-include="'views/nav.html'"></nav>
     </header> -->
     <div class="header">
-      <div class="navbar navbar-inverse" role="navigation">
+      <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
 
@@ -43,9 +43,7 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">League</a></li>
-              <li><a ng-href="#/about">League Details</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a href="#/">Home</a></li>
             </ul>
           </div>
         </div>
