--- a/pages/league_table.html
+++ b/pages/league_table.html
@@ -5,27 +5,35 @@
        <h3>Points Table</h3>
       </div>
       <table class="table table-hover">
-        <thead>
+        <thead class= "thead-default">
           <tr>
-            <th>Position</th>
-            <th>Club Logo</th>
-            <th>Team</th>
-            <th>GP</th>
-            <th>Points</th>
-            <th>Goals</th>
-            <th>Wins</th>
+          <th>#</th>
+          <th>  </th>
+          <th>TEAM</th>
+          <th>GP</th>
+          <th>W</th>
+          <th>D</th>
+          <th>L</th>
+          <th>GF</th>
+          <th>GA</th>
+          <th>GD</th>
+          <th>PTS</th>
           </tr>
         </thead>
         <tbody>
           <tr ng-repeat = "n in tables.league_table.standing">
           <!-- <a ng-href="#/fixtures/{{tables.id}}"> -->
-            <th>{{n.position}}</th>
-            <th><img class="img-responsive" ng-src="{{n.crestURI}}" width="40" height="40"/></th>
-            <th><a ng-href="#/teams" ng-click="tables.getApi(n._links.team.href)">{{n.teamName}}</a></th>
-            <th>{{n.playedGames}}</th>
-            <th>{{n.points}}</th>
-            <th>{{n.goals}}</th>
-            <th>{{n.wins}}<th>
+            <th scope="row">{{n.position}}</th>
+          <td><img ng-src="{{n.crestURI}}" width="30" height="30"></td>
+          <td><a ng-href="#/teams" ng-click="tables.getApi(n._links.team.href)">{{n.teamName}}</a></td>
+          <td>{{n.playedGames}}</td>
+          <td>{{n.wins}}</td>
+          <td>{{n.draws}}</td>
+          <td>{{n.losses}}</td>
+          <td>{{n.goals}}</td>
+          <td>{{n.goalsAgainst}}</td>
+          <td>{{n.goalDifference}}</td>
+          <td><b>{{n.points}}</b></td>
             <!-- </a> -->
           </tr>
         </tbody>
@@ -33,11 +41,12 @@
     </div>
     <div class="col-md-6" id="result">
       <div class="container-fluid slot">
-       <h3 class= "slot2">League Table</h3>
+       <h3 class= "slot2">Fixtures</h3>
       </div>
       <table class="table table-hover">
         <thead>
           <tr>
+            <th>Date</th>
             <th>Home Team</th>
             <th>Result</th>
             <th>Away Team</th>
@@ -51,6 +60,7 @@
         <tbody>
           <tr ng-repeat = "n in tables.league_details.fixtures">
           <!-- <a ng-href="#/fixtures/{{tables.id}}"> -->
+            <th>{{n.date | date:'mediumDate'}}</th>
             <th>{{n.homeTeamName}}</th>
             <th>{{n.result.goalsHomeTeam}} &mdash; {{n.result.goalsAwayTeam}}</th>
             <th>{{n.awayTeamName}}</th>
